--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-html2pdf": "^1.8.0",
+    "vue3-simple-html2pdf": "0.0.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
